Issue #2334375 by yvesvanlaer: Fixed Active hover state add button views not enough contrast.

--- a/core/modules/views_ui/css/views_ui.admin.theme.css
+++ b/core/modules/views_ui/css/views_ui.admin.theme.css
@@ -521,6 +521,7 @@ td.group-title {
 }
 
 .views-displays .tabs.secondary .open > a:hover {
+  color: #0074bd;
   background-color: #f1f1f1;
 }
 
